# ssc-pacs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  requirements.txt
.github/workflows/: ci.yml
docs/: README.md  context.md
docs/cold_storage/: design.md  runbook.md
docs/guides/: deployment_on_mac.md  installation_and_deployment.md
docs/history/: current_state_changelog.md
docs/operations/: annotation_history.md  backup_strategy.md  cluster_migration.md  commands.md  deleting_studies.md  observability.md  postgres_provisioning.md  reconciliation.md  restore_runbook.md  schema_migrations.md  secret_rotation.md  upgrading_dependencies.md
docs/recipes/: dicom_processing.md
docs/reference/: architecture.md  configuration_sources.md  data_stores.md  image_ingestion_protocol.md  runtime_and_config.md  system_overview.md  web_app.md  web_app_frontend.md
maintenance/: AUDIT_FINDINGS.md  PROGRESS.md  README.md  workstream_prompt.md
maintenance/workstreams/: 01-backup-and-dr.md  03-security-hardening.md  05-cold-storage-robustness.md  08-deployment-portability.md  09-backend-refactor.md  11-data-integrity-two-db.md  12-annotation-audit-trail.md  13-scripts-reorganization.md
orthanc-indexer-patched/: Dockerfile  PATCHES.md  README.md
orthanc-indexer-patched/src/: .hgignore  AUTHORS  CITATION.cff  CMakeLists.txt  NEWS  README  TODO
orthanc-indexer-patched/src/Resources/: SyncOrthancFolder.py
orthanc-indexer-patched/src/Resources/Orthanc/CMake/: DownloadOrthancFramework.cmake
orthanc-indexer-patched/src/Resources/Orthanc/Plugins/: OrthancPluginCppWrapper.cpp  OrthancPluginCppWrapper.h
orthanc-indexer-patched/src/Sources/: IndexerDatabase.cpp  IndexerDatabase.h  Plugin.cpp  PrepareDatabase.sql  StorageArea.cpp  StorageArea.h  UnitTestsMain.cpp
ssc-sql-db/: create_image_series.sql  create_image_study.sql  create_patient.sql  import_csv_to_postgres.py  import_lvo_table_to_psql.sh
stanford-stroke-pacs/: .env.example  alembic.ini  config.example.toml  config.toml  deploy.env.example  docker-compose.override.macos.yml  docker-compose.override.yml  docker-compose.yml  environment.yml  init_orthanc_db.sh  orthanc.json  requirements.txt  ssc-companion.service  ssc-web-app.service
stanford-stroke-pacs/alembic/: env.py
stanford-stroke-pacs/alembic/versions/: 0001_baseline.py  0002_warming_started_at.py  0003_annotations_history.py  0007_cache_state_queued_status.py  0008_users_allowed_datasets.py  0016_study_episode.py  (+9 more)
stanford-stroke-pacs/benchmarks/: cold_storage_evaluation.py  cold_storage_evaluation_results.json  cold_storage_report.md  cold_storage_report.py  cold_storage_report_results.json  dicom_archive_benchmark.py  dicom_archive_benchmark_tarzst.py  rsync_remote_benchmark.py  rsync_remote_benchmark_results.json
stanford-stroke-pacs/companion/: README.md  alembic.ini  app.py  auth.py  build.sh  cache_manager.py  common.py  config.py  db.py  logging_config.py  metrics.py  orthanc_client.py  package-lock.json  package.json  pyproject.toml  reconciliation.py  requirements-dev.txt  requirements.txt  vite.config.js  vitest.config.js
stanford-stroke-pacs/documentation/: README.md  context.md
stanford-stroke-pacs/image_ingestion_protocols/: dicom_tags.py  execute_image_ingestion_protocol.example.yaml  execute_image_ingestion_protocol.py  image_ingestion_protocol.py  run_all_batches.sh  series_classification.py  test_image_ingestion_grouping.py  test_path_safety.py  utils.py
stanford-stroke-pacs/image_integration_protocols/: execute_image_integration_protocol.example.yaml  execute_image_integration_protocol.py  execute_image_integration_protocol.yaml  image_integration_protocol.py  run_all_batches.sh  test_image_integration_grouping.py  utils.py
stanford-stroke-pacs/launchd/: com.ssc.cold-storage-health.plist  com.ssc.cold-storage-health.plist.in  com.ssc.colima.plist  com.ssc.orthanc-storage-backup.plist  com.ssc.pg-backup-freshness.plist  com.ssc.pg-backup-freshness.plist.in  com.ssc.pg-backup-orthanc.plist  com.ssc.pg-backup-stanford-stroke.plist  com.ssc.postgres.plist  com.ssc.reconciliation.plist  com.ssc.reconciliation.plist.in  com.ssc.webapp.plist  com.ssc.webapp.plist.in
stanford-stroke-pacs/scripts/: README.md  _lib.sh  archive_all_series.py  backfill_annotation_history.py  check_backup_freshness.sh  cleanup_loose_dicoms.py  cold_storage_health.py  dicom_path_sql_fs_audit.py  dicom_to_nifti.py  enrich_orthanc.py  label_studies.py  labelled_table_sync.py  list_unarchived_series.py  manage_users.py  mirror_cold_archive.sh  orthanc_holdout_case.py  orthanc_path_availability_test.py  reconcile.py  remove_label.py  remove_label.sh  teardown.sh  test_snapshot_sql.py  tunnel.sh  verify_and_repair_archives.py  verify_and_repair_archives_results.json  verify_indexing.py
stanford-stroke-pacs/systemd/: cold-archive-mirror.service  cold-archive-mirror.service.in  cold-archive-mirror.timer  cold-archive-mirror.timer.in  cold-storage-health.service  cold-storage-health.service.in  cold-storage-health.timer  cold-storage-health.timer.in  orthanc-storage-backup.service  orthanc-storage-backup.service.in  orthanc-storage-backup.timer  orthanc-storage-backup.timer.in  pg-backup-freshness.service  pg-backup-freshness.service.in  pg-backup-freshness.timer  pg-backup-freshness.timer.in  pg-backup-orthanc.service  pg-backup-orthanc.service.in  pg-backup-orthanc.timer  pg-backup-orthanc.timer.in  pg-backup-stanford-stroke.service  pg-backup-stanford-stroke.service.in  pg-backup-stanford-stroke.timer  pg-backup-stanford-stroke.timer.in  reconciliation.service  reconciliation.service.in  reconciliation.timer  reconciliation.timer.in  ssc-web-app.service.in
stanford-stroke-pacs/web-app/: README.md  app.py  auth.py  cache_manager.py  common.py  config.py  dataset_access.py  db.py  deletion.py  eslint.config.js  index.html  labelled_table_sync.py  logging_config.py  metrics.py  orthanc_client.py  package-lock.json  package.json  pyproject.toml  rate_limit.py  reconciliation.py  requirements-dev.txt  vite.config.js  vitest.config.js
(+332 files in other folders)
